--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
+    "formik": "^2.2.9",
     "native-base": "^3.0.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -31,7 +32,8 @@
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
