--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "Our TODO",
-    "slug": "our-todo",
-    "version": "2.0.0",
+    "name": "Todoable",
+    "slug": "todoable",
+    "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
@@ -16,8 +16,8 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": false,
-      "bundleIdentifier": "digital.korol.todo",
-      "buildNumber": "7"
+      "bundleIdentifier": "digital.korol.todoable",
+      "buildNumber": "4"
     },
     "android": {
       "adaptiveIcon": {
